refactor: remove unused imports and improve code readability across multiple controllers and services